--- a/mvpframe/build.gradle
+++ b/mvpframe/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api 'com.github.DarkHorse-CN:BaseFrame:v1.0.1'
 }
 repositories {
     mavenCentral()
