添加统一版本管理

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext {
+        compileSdkVersion = 27
+        minSdkVersion = 19
+        targetSdkVersion = 27
+        versionCode = 1
+        versionName = "1.0"
+        kotlin_version = "1.2.41"
+
+        support_v7 = "27.1.1"
+        gson = "2.8.2"
+    }
 
     repositories {
         google()
@@ -21,10 +31,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
