--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply from : "config.gradle"
 
 buildscript {
-    ext. kotlin_version = "1.2.41"
+    ext {
+        // Sdk and tools
+        compileSdkVersion = 28
+        minSdkVersion = 19
+        targetSdkVersion = 28
+
+        // App dependencies
+        gradleVersion = '3.2.0-alpha18'
+        kotlinVersion = '1.2.41'
+
+        espressoVersion = '3.0.2'
+        junitVersion = '4.12'
+        runnerVersion = '1.0.1'
+
+        supportLibraryVersion = '27.1.1'
+        gsonVersion = '2.8.2'
+
+    }
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath "com.android.tools.build:gradle:$gradleVersion"
         //noinspection DifferentKotlinGradleVersion
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
