--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,7 @@ buildscript {
         targetSdkVersion = 28
 
         // App dependencies
-        gradleVersion = '3.2.0-alpha18'
         kotlinVersion = '1.2.41'
-
-        espressoVersion = '3.0.2'
-        junitVersion = '4.12'
-        runnerVersion = '1.0.1'
 
         supportLibraryVersion = '27.1.1'
         gsonVersion = '2.8.2'
@@ -25,7 +20,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "com.android.tools.build:gradle:3.2.0-alpha18"
         //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
